...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeMessage">


        <Button
            android:id="@+id/bookAppointmentButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/blue"
...
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

        <Button
            android:id="@+id/myAppointmentsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/red"
...
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bookAppointmentButton" />

        <Button
            android:id="@+id/myRecordsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="35dp"
            android:backgroundTint="@color/blue"
...
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:iconTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myAppointmentButton" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
