...
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <Button
            android:id="@+id/addDoctorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addorDeleteDoctor"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/addStaffButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/red"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addOrDeleteStaff"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="28sp"
            app:iconTint="@color/white" />

        <Button
            android:id="@+id/addPatientButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:fontFamily="sans-serif-medium"
            android:text="@string/addOrDeletePatient"
...
